// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AliasesListEntry adds aliasPrimaryBadge & removes aliasButtonMakePrimary in AliasesListEntry if it's primary 1`] = `
<div>
  <li
    class="list-group-item d-flex flex-row justify-content-between align-items-center"
  >
    <div>
      test-primary
      <span
        class="ms-2 badge bg-secondary"
        data-testid="aliasPrimaryBadge"
        title="editor.modal.aliases.isPrimary"
      >
        editor.modal.aliases.primaryLabel
      </span>
    </div>
    <div>
      <button
        class="btn btn-danger"
        data-testid="aliasButtonRemove"
        disabled=""
        title="editor.modal.aliases.removeAlias"
        type="button"
      >
        BootstrapIconMock_X
      </button>
    </div>
  </li>
</div>
`;

exports[`AliasesListEntry removes aliasPrimaryBadge & adds aliasButtonMakePrimary in AliasesListEntry if it's not primary 1`] = `
<div>
  <li
    class="list-group-item d-flex flex-row justify-content-between align-items-center"
  >
    <div>
      test-primary
    </div>
    <div>
      <button
        class="me-2 btn btn-secondary"
        data-testid="aliasButtonMakePrimary"
        disabled=""
        title="editor.modal.aliases.makePrimary"
        type="button"
      >
        BootstrapIconMock_Star
      </button>
      <button
        class="btn btn-danger"
        data-testid="aliasButtonRemove"
        disabled=""
        title="editor.modal.aliases.removeAlias"
        type="button"
      >
        BootstrapIconMock_X
      </button>
    </div>
  </li>
</div>
`;

exports[`AliasesListEntry renders an AliasesListEntry that is not primary 1`] = `
<div>
  <li
    class="list-group-item d-flex flex-row justify-content-between align-items-center"
  >
    <div>
      test-non-primary
    </div>
    <div>
      <button
        class="me-2 btn btn-secondary"
        data-testid="aliasButtonMakePrimary"
        title="editor.modal.aliases.makePrimary"
        type="button"
      >
        BootstrapIconMock_Star
      </button>
      <button
        class="btn btn-danger"
        data-testid="aliasButtonRemove"
        title="editor.modal.aliases.removeAlias"
        type="button"
      >
        BootstrapIconMock_X
      </button>
    </div>
  </li>
</div>
`;

exports[`AliasesListEntry renders an AliasesListEntry that is primary 1`] = `
<div>
  <li
    class="list-group-item d-flex flex-row justify-content-between align-items-center"
  >
    <div>
      test-primary
      <span
        class="ms-2 badge bg-secondary"
        data-testid="aliasPrimaryBadge"
        title="editor.modal.aliases.isPrimary"
      >
        editor.modal.aliases.primaryLabel
      </span>
    </div>
    <div>
      <button
        class="btn btn-danger"
        data-testid="aliasButtonRemove"
        title="editor.modal.aliases.removeAlias"
        type="button"
      >
        BootstrapIconMock_X
      </button>
    </div>
  </li>
</div>
`;
